@@ -9,6 +9,10 @@ Version vNext
 		 of a decorator type (RegisterDecorator) where not added to the decorated registration. (work item 19391)
 		-[Core] Decorating empty (unregistered) collections failed when the decorator had a lifestyle different
 		 than transient or singleton. (work item 19400)
+		-[Core] When RegisterManyForOpenGeneric registered implementations that implemented multiple closed
+		 generic versions of the supplied generic interface, each closed-generic interface got its own
+		 registration, which had the effect of still returning more than one instance of that implementation
+		 within the registered lifestyle. (work item 19384).
 
 
 Version v2.0.0 (v2.0 RTM) 2013-02-25
